--- a/src/client/components/frsModerate/frsModerate.less
+++ b/src/client/components/frsModerate/frsModerate.less
@@ -68,6 +68,12 @@
         }
         .frs-actions {
             text-align: center;
+            a {
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: none;
+            }
         }
         .frs-no-new-post,
         .frs-no-forum {
