--- a/src/client/components/frsForums/frsForums.html
+++ b/src/client/components/frsForums/frsForums.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <div class="badge frs-badge-btn frs-mr1 frs-ml1 frs-bg-cat frs-count">
-                            {{ c.forumsCount }}
+                            {{ c.forums.length }}
                         </div>
                     </div>
                 </div>
