--- a/src/client/components/frsThreads/frsThreads.html
+++ b/src/client/components/frsThreads/frsThreads.html
@@ -50,7 +50,7 @@
                         <tbody>
                             {{#each it in threadsList }}
                                 {{ threadCatch it }}
-                                <tr data-row-id="{{ it._id }}" class="frs-thread-tr" data-bs-toggle="tooltip" data-bs-title="{{ threadTooltip it }}">
+                                <tr data-row-id="{{ it.threadId }}" class="frs-thread-tr" data-bs-toggle="tooltip" data-bs-title="{{ threadTooltip it }}">
                                     <td class="frs-td">
                                         <div class="frs-thread-title">{{ it.title }}</div>
                                         <div class="frs-ellipsize frs-ellipsize-2">{{{ it.content }}}</div>
