Define the 'All Posts' forums page

--- a/src/client/stylesheets/frs_forums.less
+++ b/src/client/stylesheets/frs_forums.less
@@ -2,7 +2,8 @@
 .frsThreads,
 .frsPosts,
 .frsModerate,
-.frsManager {
+.frsManager,
+.frsAllPosts {
     margin-left: 2em;
     margin-right: 2em;
 
