Manage allPosts options

--- a/src/client/components/frsAllPosts/frsAllPosts.html
+++ b/src/client/components/frsAllPosts/frsAllPosts.html
@@ -1,7 +1,7 @@
 <template name="frsAllPosts">
     <div class="frsAllPosts">
 
-        <div class="frs-top">
+        <div class="frs-top frs-allposts">
             <div class="frs-left">
                 <div class="frs-title">
                     {{ i18n label="page_title" }}
