teEditor component becomes teScriber

--- a/src/client/components/frsAllPosts/frsAllPosts.html
+++ b/src/client/components/frsAllPosts/frsAllPosts.html
@@ -17,11 +17,11 @@
                 </div>
             </div>
             <div class="frs-right">
-                {{> frs_posts_options options }}
+                {{> frs_posts_options optionsParms }}
             </div>
         </div>
 
-        {{> frs_posts_all }}
+        {{> frs_posts_all postsParms }}
 
         <div class="frs-bottom">
         </div>
