--- a/src/client/components/frs_post_edit/frs_post_edit.html
+++ b/src/client/components/frs_post_edit/frs_post_edit.html
@@ -8,7 +8,7 @@
             </div>
         {{/if}}
 
-        <div>{{> teEditor (parmsEditor) }}</div>
+        <div>{{> teScriber (parmsEditor) }}</div>
 
         {{#if showButtons }}
             <div class="d-flex justify-content-between align-items-center frs-buttons">
