Fix frsForums home page

--- a/src/client/components/frsForums/frsForums.html
+++ b/src/client/components/frsForums/frsForums.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="d-flex align-items-center">
-                        <div class="badge frs-badge-btn frs-mr1 frs-ml1 frs-bg-cat frs-count">
+                        <div class="badge frs-badge-btn frs-mr1 frs-ml1 frs-bg-cat frs-count" title="{{ forumsCount c }}">
                             {{ c.forums.length }}
                         </div>
                     </div>
