Use new Modal constants definitions

--- a/src/client/components/frs_category_panel/frs_category_panel.html
+++ b/src/client/components/frs_category_panel/frs_category_panel.html
@@ -8,7 +8,7 @@
             <label for="" class="form-label form-label-sm frs-one">{{ i18n label="description_label" }}</label>
             <textarea class="form-control form-control-sm frs-description" placeholder="{{ i18n label="description_placeholder" }}" rows="3">{{ catDescription }}</textarea>
 
-            <div></div>
+            <label for="" class="form-label form-label-sm frs-one">{{ i18n label="color_label" }}</label>
             {{> frs_color_button rvColor=(rvColor) }}
         </form>
 
