--- a/src/client/components/frsPosts/frsPosts.less
+++ b/src/client/components/frsPosts/frsPosts.less
@@ -43,6 +43,7 @@
             }
             .frs-td.frs-reply-td .btn {
                 margin-top: 0.5em;
+                width: 100%;
             }
             .frs-moderated-label,
             .frs-deleted-label {
