--- a/src/client/stylesheets/frs_forums.less
+++ b/src/client/stylesheets/frs_forums.less
@@ -23,10 +23,15 @@
             margin-left: 1em;
             ol.breadcrumb {
                 --bs-breadcrumb-margin-bottom: 0;
+                flex-wrap: nowrap;
                 li {
                     font-size: 0.85rem;
+                    white-space: nowrap;
                 }
             }
+        }
+        .frs-badges {
+            margin-left: 1em;
         }
     }
     .frs-header {
