--- a/src/client/components/frsManager/frsManager.less
+++ b/src/client/components/frsManager/frsManager.less
@@ -13,6 +13,12 @@
         }
     }
 
+    .frs-tree-tab .buttons {
+        button {
+            white-space: nowrap;
+        }
+    }
+
     .frs-forums-tree {
         .jstree-anchor,
         .jstree-wholerow {
